--- a/Arc/styles/contact-sidebar.less
+++ b/Arc/styles/contact-sidebar.less
@@ -4,43 +4,61 @@
 // Contact sidebar
 //------------------------------------------------------------
 .column-MessageListSidebar {
-	background: @colorWindowBg;
-	border-left: 1px solid @colorBorder;
-	padding-top: 12px;
-	padding-left: 10px;
-	padding-right: 10px;
+	background: @clrWindowBg;
+	border-left: 1px solid @clrWindowBorder;
+	padding: 10px;
 }
 
 //------------------------------------------------------------
 // Contact card
 //------------------------------------------------------------
 .sidebar-section {
-	background: @colorListBg;
-	border: 1px solid @colorBorder;
+	background: @clrBodyBg;
+	border: 1px solid @clrWindowBorder;
 	border-radius: 3px;
+
+	p {
+		color: @clrText;
+	}
 }
 
-.participant-profile {
-	.profile-photo-wrap {
-		left: 0px;
-		top: 0px;
-		box-shadow: none;
+.contact-profile-photo {
+	box-shadow: none;
+	background: transparent;
+	padding: 0;
 
-		.profile-photo .default-profile-image {
+	.profile-photo {
+		width: 50px;
+		height: 50px;
+
+		.default-profile-image {
 			box-shadow: none;
 			background-image: none;
+			border-radius: 50%;
+			line-height: 50px;
+			width: 50px;
+			height: 50px;
+
+			.layer {
+				border-radius: 50%;
+			}
 		}
 	}
 
-	.personal-info {
-		padding-top: 30px;
-		text-align: center;
+}
 
-		.selectable {
-			overflow: hidden;
-			text-overflow: ellipsis;
-			white-space: nowrap;
-		}
+.participant-profile,
+.company-profile {
+	.personal-info .email {
+		color: @clrText;
+	}
+
+	.larger, .larger {
+		color: @clrText;
+		font-weight: 700;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		white-space: nowrap;
 	}
 }
 
@@ -48,27 +66,35 @@
 // Related threads
 //------------------------------------------------------------
 .related-threads {
+	background: @clrListBg;
 	border-top: none;
 
 	.related-thread {
-		border-top: 1px solid @colorBorder;
-
-		.content {
-			color: @colorTextFaded;
-		}
+		border-top: 1px solid @clrWindowBorder;
+		color: @clrTextFadedLess;
 
 		&:hover {
-			background-color: @colorListItemHover;
+			background-color: @clrListHover;
+		}
+
+		&:active {
+			background-color: @clrAccent;
+			color: @clrTextActive;
 		}
 	}
 
 	.toggle {
-		padding: 6px 15px 8px;
-		font-size: 13px;
-		color: @colorAccent;
+		border-top: 1px solid @clrWindowBorder;
+		color: @clrButtonText;
+		font-size: 14px;
 
 		&:hover {
-			cursor: pointer;
+			background-color: @clrButtonBgHover;
+		}
+
+		&:active {
+			background-color: @clrButtonBgActive;
+			color: @clrButtonTextActive;
 		}
 	}
 }
