--- a/Arc/styles/draftlist-toolbar.less
+++ b/Arc/styles/draftlist-toolbar.less
@@ -5,13 +5,14 @@
 //------------------------------------------------------------
 .toolbar-DraftList {
 	height: 100%;
-	background: @colorWindowBg;
-	border: none;
+	background: @clrWindowBg;
 
+	border: none;
 	border-left: 1px solid transparent;
 
 	.selection-bar .absolute {
-		background: @colorWindowBg;
+		background: @clrWindowBg;
+		border-color: @clrWindowBg;
 	}
 
 	//---------------------------------
@@ -23,19 +24,24 @@
 		border: 1px solid transparent;
 		border-radius: 3px;
 		height: 26px;
+		color: @clrToolBtnText;
+
+		img.content-mask {
+			background-color: @clrToolBtnText;
+		}
 
 		&:hover {
-			background: @colorBtnBgLight;
-			border-color: @colorBtnBorderLight;
+			background: @clrToolBtnBgHover;
+			border-color: @clrToolBtnBorderHover;
 		}
 
 		&:active {
-			background: @colorBtnBgActiveLight;
-			border-color: @colorBtnBorderActiveLight;
-			color: @colorBtnTextActive;
+			background: @clrToolBtnBgActive;
+			border-color: @clrToolBtnBorderActive;
+			color: @clrToolBtnTextActive;
 
 			img.content-mask {
-				background-color: @colorBtnTextActive;
+				background-color: @clrToolBtnTextActive;
 			}
 		}
 	}
@@ -44,7 +50,7 @@
 	// Toolbar text
 	//---------------------------------
 	.inner .centered {
-		padding-top: 2px;
-		color: @colorTextFaded !important;
+		padding-top: 3px;
+		color: @clrTextFadedLess !important;
 	}
 }
