Arc: Update sidebar colors

--- a/Arc/styles/arc-variables.less
+++ b/Arc/styles/arc-variables.less
@@ -17,7 +17,7 @@
 // Sidebar
 //---------------------------------
 @clrSidebarBg: #353945;
-@clrSidebarBorder: #2a2d37;
+@clrSidebarBorder: @clrSidebarBg;
 @clrSidebarHover: rgba(186, 195, 207, 0.15);
 @clrSidebarText: #bac3cf;
 @clrSidebarTextFaded: fade(@clrSidebarText, 50%);
