--- a/Arc/styles/arc-variables.less
+++ b/Arc/styles/arc-variables.less
@@ -35,16 +35,16 @@
 //---------------------------------
 // Window
 //---------------------------------
-@clrWindowBg: #383c4a;
-@clrWindowBorder: #262a33;
-@clrText: #bac3cf;
+@clrWindowBg: #f5f6f7;
+@clrWindowBorder: #d4d5db;
+@clrText: #231f20;
 @clrTextFaded: fade(@clrText, 50%);
 @clrTextFadedLess: fade(@clrText, 80%);
 @clrTextFadedMore: fade(@clrText, 15%);
 @clrTextActive: #ffffff;
 
-@clrBodyBg: #404552;
-@clrWarningBar: lighten(@clrBodyBg, 5%);
+@clrBodyBg: #ffffff;
+@clrWarningBar: darken(@clrBodyBg, 5%);
 @clrTranslateBar: darken(@clrBodyBg, 3%);
 
 @clrScrollbar: #767b87;
@@ -63,7 +63,7 @@
 //---------------------------------
 // Lists / Threadlist
 //---------------------------------
-@clrListBg: #404552;
+@clrListBg: #ffffff;
 @clrListHover: lighten(@clrListBg, 3%);
 @clrListText: @clrText;
 @clrListTextFaded: @clrTextFaded;
@@ -76,8 +76,8 @@
 //---------------------------------
 // Preferences
 //---------------------------------
-@clrPrefsWindowBg: @clrWindowBg;
-@clrPrefsBodyBg: lighten(@clrPrefsWindowBg, 2%);
+@clrPrefsWindowBg: darken(@clrWindowBg, 2%);
+@clrPrefsBodyBg: @clrWindowBg;
 @clrPrefsTabHover: lighten(@clrPrefsWindowBg, 5%);
 @clrPrefsTabActive: @clrPrefsBodyBg;
 @clrPrefsText: @clrText;
@@ -85,7 +85,7 @@
 @clrPrefsTextFadedLess: @clrTextFadedLess;
 @clrPrefsTextFadedMore: @clrTextFadedMore;
 @clrPrefsTextActive: #ffffff;
-@clrPrefsWarningBar: lighten(@clrPrefsBodyBg, 5%);
+@clrPrefsWarningBar: darken(@clrPrefsBodyBg, 5%);
 
 //---------------------------------
 // Activity dashboard
