Arc: update input/button colors

--- a/Arc/styles/arc-variables.less
+++ b/Arc/styles/arc-variables.less
@@ -100,22 +100,22 @@
 //---------------------------------
 // Controls
 //---------------------------------
-@clrInputBg: #404552;
-@clrInputBorder: #2b2e39;
-@clrInputText: #d3dae3;
-@clrInputTextPlaceholder: fade(#d3dae3, 30%);
+@clrInputBg: #ffffff;
+@clrInputBorder: #cfd6e6;
+@clrInputText: #231f20;
+@clrInputTextPlaceholder: fade(#231f20, 30%);
 
-@clrButtonBg: #444a58;
-@clrButtonBorder: #2b2e39;
-@clrButtonBgHover: #505666;
-@clrButtonBorderHover: #2b2e39;
+@clrButtonBg: #fbfbfc;
+@clrButtonBorder: #cfd6e6;
+@clrButtonBgHover: #ffffff;
+@clrButtonBorderHover: #cfd6e6;
 @clrButtonBgActive: @clrAccent;
-@clrButtonBorderActive: #2b2e39;
-@clrButtonBgDisabled: fade(#444a58, 55%);
-@clrButtonBorderDisabled: fade(#2b2e39, 55%);
-@clrButtonText: #d3dae3;
+@clrButtonBorderActive: @clrAccent;
+@clrButtonBgDisabled: fade(#fbfbfc, 55%);
+@clrButtonBorderDisabled: fade(#cfd6e6, 55%);
+@clrButtonText: #231f20;
 @clrButtonTextActive: #ffffff;
-@clrButtonTextDisabled: fade(#d3dae3, 45%);
+@clrButtonTextDisabled: fade(#231f20, 45%);
 
 @clrButtonDefaultBg: #4dadd4;
 @clrButtonDefaultBorder: #4dadd4;
