Arc: update toolbtn colors

--- a/Arc/styles/arc-variables.less
+++ b/Arc/styles/arc-variables.less
@@ -52,13 +52,13 @@
 @clrScrollbarActive: @clrAccent;
 @clrScrollbarOverlay: fade(#a5abb5, 40%);
 
-@clrToolBtnBgHover: rgba(95, 105, 127, 0.37);
-@clrToolBtnBorderHover: rgba(21, 23, 28, 0.37);
+@clrToolBtnBgHover: rgba(251, 251, 252, 0.9);
+@clrToolBtnBorderHover: #d9dbe0;
 @clrToolBtnBgActive: @clrAccent;
 @clrToolBtnBorderActive: @clrAccent;
-@clrToolBtnText:rgba(207, 218, 231, 0.8);
+@clrToolBtnText:rgba(82, 93, 118, 0.8);
 @clrToolBtnTextActive: #ffffff;
-@clrToolBtnTextDisabled: rgba(207, 218, 231, 0.35);
+@clrToolBtnTextDisabled: rgba(82, 93, 118, 0.35);
 
 //---------------------------------
 // Lists / Threadlist
