Arc: update silder colors

--- a/Arc/styles/arc-variables.less
+++ b/Arc/styles/arc-variables.less
@@ -134,11 +134,11 @@
 @clrButtonInfoText: @clrTextActive;
 @clrButtonInfoTextActive: @clrAccent;
 
-@clrSliderTrackBg: #2d303b;
-@clrSliderButtonBg: #444a58;
-@clrSliderButtonBorder: #262933;
-@clrSliderButtonBgHover: #505666;
-@clrSliderButtonBorderHover: #262933;
+@clrSliderTrackBg: #cfd6e6;
+@clrSliderButtonBg: #fbfbfc;
+@clrSliderButtonBorder: rgba(123, 142, 186, 0.5);
+@clrSliderButtonBgHover: #ffffff;
+@clrSliderButtonBorderHover: rgba(123, 142, 186, 0.5);
 @clrSliderButtonBgActive: @clrAccent;
 @clrSliderButtonBorderActive: @clrAccent;
 
