Arc: Update link colors

--- a/Arc/styles/arc-variables.less
+++ b/Arc/styles/arc-variables.less
@@ -10,8 +10,8 @@
 @clrWarningRed: #f04a50;
 @clrWarningYellow: #f27835;
 
-@clrLink: #a9caf1;
-@clrLinkVisited: #7eafe9;
+@clrLink: #2679db;
+@clrLinkVisited: #1e61b0;
 
 //---------------------------------
 // Sidebar
