Arc: Update popover colors

--- a/Arc/styles/arc-variables.less
+++ b/Arc/styles/arc-variables.less
@@ -142,10 +142,10 @@
 @clrSliderButtonBgActive: @clrAccent;
 @clrSliderButtonBorderActive: @clrAccent;
 
-@clrPopoverBg: #383c4a;
-@clrPopoverBorder: #20222a;
+@clrPopoverBg: #ffffff;
+@clrPopoverBorder: #dcdfe3;
 @clrPopoverBgHover: @clrAccent;
-@clrPopoverText: #d3dae3;
+@clrPopoverText: #231f20;
 @clrPopoverTextFaded: fade(@clrPopoverText, 60%);
 @clrPopoverTextActive: #ffffff;
 @clrPopoverTextActiveFaded: fade(@clrPopoverTextActive, 60%);
