Arc: Update list hover color

--- a/Arc/styles/arc-variables.less
+++ b/Arc/styles/arc-variables.less
@@ -64,7 +64,7 @@
 // Lists / Threadlist
 //---------------------------------
 @clrListBg: #ffffff;
-@clrListHover: lighten(@clrListBg, 3%);
+@clrListHover: rgba(0, 0, 0, 0.05);
 @clrListText: @clrText;
 @clrListTextFaded: @clrTextFaded;
 @clrListTextFadedLess: @clrTextFadedLess;
