--- a/Arc/styles/arc-variables.less
+++ b/Arc/styles/arc-variables.less
@@ -152,8 +152,14 @@
 
 @clrToastBg: #353945;
 @clrToastBorder: #1f2128;
-@clrToastText: @clrText;
-@clrToastTextActive: @clrTextActive;
+@clrToastText: #bac3cf;
+@clrToastTextActive: #ffffff;
+@clrToastButtonBg: #444a58;
+@clrToastButtonBorder: #2b2e39;
+@clrToastButtonBgHover: #505666;
+@clrToastButtonBorderHover: #2b2e39;
+@clrToastButtonBgActive: @clrAccent;
+@clrToastButtonBorderActive: #2b2e39;
 
 //------------------------------------------------------------
 // LESS mixins
