--- a/Arc/styles/messagelist.less
+++ b/Arc/styles/messagelist.less
@@ -669,39 +669,5 @@
 //------------------------------------------------------------
 #message-list .scrollbar-track,
 .composer-full-window .scrollbar-track {
-	background: @clrWindowBg;
-	border-left: 1px solid transparent;
-	border-right: none;
-	width: 7px;
-	padding: 1px;
-
-	.scrollbar-handle {
-		background: @clrScrollbarOverlay;
-		border: none;
-		border-radius: 4px;
-	}
-
-	&:hover,
-	&.dragging {
-		border-color: @clrWindowBorder;
-		width: 13px;
-		padding: 3px;
-
-	}
-
-	&:hover:not(.dragging) {
-		.scrollbar-handle {
-			background: @clrScrollbar;
-
-			&:hover {
-				background: @clrScrollbarHover;
-			}
-		}
-	}
-
-	&.dragging {
-		.scrollbar-handle {
-			background: @clrScrollbarActive;
-		}
-	}
+	.arc-scrollbar(@clrWindowBg, @clrWindowBorder);
 }
