--- a/Arc/styles/draftlist.less
+++ b/Arc/styles/draftlist.less
@@ -76,5 +76,5 @@
 // Scroll bar
 //------------------------------------------------------------
 .draft-list .scrollbar-track {
-	.arc-scrollbar(@clrListBg, @clrWindowBorder);
+	.arc-scrollbar();
 }
