--- a/Arc/styles/messagelist.less
+++ b/Arc/styles/messagelist.less
@@ -669,5 +669,5 @@
 //------------------------------------------------------------
 #message-list .scrollbar-track,
 .composer-full-window .scrollbar-track {
-	.arc-scrollbar(@clrWindowBg, @clrWindowBorder);
+	.arc-scrollbar();
 }
