--- a/Arc/styles/preferences.less
+++ b/Arc/styles/preferences.less
@@ -261,7 +261,7 @@ body.platform-linux .sheet-toolbar-container[data-id="Preferences"] {
 		}
 
 		.scrollbar-track {
-			.arc-scrollbar(@clrListBg, @clrWindowBorder);
+			.arc-scrollbar();
 		}
 	}
 
@@ -724,5 +724,5 @@ body.platform-linux .sheet-toolbar-container[data-id="Preferences"] {
 // Scrollbar
 //------------------------------------------------------------
 .column-Preferences .scrollbar-track {
-	.arc-scrollbar(@clrPrefsBodyBg, @clrWindowBorder);
+	.arc-scrollbar();
 }
