--- a/Arc/styles/sidebar-toolbar.less
+++ b/Arc/styles/sidebar-toolbar.less
@@ -156,6 +156,6 @@
 	// Activity dropdown scrollbar
 	//---------------------------------
 	.scrollbar-track {
-		.arc-scrollbar(@clrListBg, @clrWindowBorder);
+		.arc-scrollbar();
 	}
 }
