--- a/Arc/styles/theme-selector.less
+++ b/Arc/styles/theme-selector.less
@@ -56,5 +56,5 @@
 // Scroll bar
 //------------------------------------------------------------
 .theme-picker .scrollbar-track {
-	.arc-scrollbar(@clrWindowBg, @clrWindowBorder);
+	.arc-scrollbar();
 }
