--- a/Arc/styles/threadlist.less
+++ b/Arc/styles/threadlist.less
@@ -140,5 +140,5 @@
 // Scrollbar
 //------------------------------------------------------------
 .thread-list .scrollbar-track {
-	.arc-scrollbar(@clrListBg, @clrWindowBorder);
+	.arc-scrollbar();
 }
