--- a/Arc/styles/sidebar.less
+++ b/Arc/styles/sidebar.less
@@ -267,5 +267,5 @@
 // Scrollbar
 //------------------------------------------------------------
 .account-sidebar .scrollbar-track {
-	.arc-scrollbar(@clrSidebarBg, @clrSidebarBorder);
+	.arc-scrollbar();
 }
