--- a/Arc/styles/arc-variables.less
+++ b/Arc/styles/arc-variables.less
@@ -191,24 +191,62 @@
 		padding-left: 3px;
 		padding-right: 2px;
 
-		.scrollbar-handle {
-			opacity: 0.99;
-		}
+		.scrollbar-handle { opacity: 0.99; }
 	}
 
 	&:hover:not(.dragging) {
 		.scrollbar-handle {
 			background: @sliderNormal;
 
-			&:hover {
-				background: @sliderHover;
-			}
+			&:hover { background: @sliderHover; }
 		}
 	}
 
 	&.dragging {
+		.scrollbar-handle { background: @sliderActive; }
+	}
+}
+
+.arc-scrollbar-sidebar() {
+	@trackBg: rgba(42, 45, 55, 0.95);
+	@trackBorder: rgba(42, 45, 55, 0.95);
+	@sliderOverlay: #e7eaee;
+	@sliderNormal: rgba(231, 234, 238, 0.7);
+	@sliderHover: #f6f7f9;
+	@sliderActive: #5294e2;
+
+	background: transparent;
+	border-left: 1px solid transparent;
+	border-right: 1px solid transparent;
+	width: 12px;
+	padding: 3px 0px 3px 6px;
+
+	.scrollbar-handle {
+		background: @sliderOverlay;
+		border: none;
+		border-radius: 3px;
+		opacity: 0.4;
+	}
+
+	&:hover,
+	&.dragging {
+		background: @trackBg;
+		border-left: 1px solid @trackBorder;
+		padding-left: 3px;
+		padding-right: 2px;
+
+		.scrollbar-handle { opacity: 0.99; }
+	}
+
+	&:hover:not(.dragging) {
 		.scrollbar-handle {
-			background: @sliderActive;
+			background: @sliderNormal;
+
+			&:hover { background: @sliderHover; }
 		}
+	}
+
+	&.dragging {
+		.scrollbar-handle { background: @sliderActive; }
 	}
 }
