Arc-Dark: Update scrollbar colors

--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -158,11 +158,11 @@
 }
 
 .arc-scrollbar() {
-	@trackBg: #fcfcfc;
-	@trackBorder: #dcdfe3;
-	@sliderOverlay: #8a8e96;
-	@sliderNormal: #b8babf;
-	@sliderHover: #c7c9cd;
+	@trackBg: #3e434f;
+	@trackBorder: #2b2e39;
+	@sliderOverlay: #a5abb5;
+	@sliderNormal: #767b87;
+	@sliderHover: #676b78;
 	@sliderActive: #5294e2;
 
 	background: transparent;
