Arc-Dark: Update toast color variables and styling

--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -143,6 +143,12 @@
 @clrToastBorder: #1f2128;
 @clrToastText: @clrText;
 @clrToastTextActive: @clrTextActive;
+@clrToastButtonBg: #444a58;
+@clrToastButtonBorder: #2b2e39;
+@clrToastButtonBgHover: #505666;
+@clrToastButtonBorderHover: #2b2e39;
+@clrToastButtonBgActive: @clrAccent;
+@clrToastButtonBorderActive: #2b2e39;
 
 //------------------------------------------------------------
 // LESS mixins
