--- a/Arc-Dark/styles/common.less
+++ b/Arc-Dark/styles/common.less
@@ -263,8 +263,8 @@ select {
 	}
 
 	.action {
-		background: @clrButtonBg;
-		border: 1px solid @clrButtonBorder;
+		background: @clrToastButtonBg;
+		border: 1px solid @clrToastButtonBorder;
 		border-radius: 3px;
 
 		.undo-action-text {
@@ -276,13 +276,13 @@ select {
 		}
 
 		&:hover {
-			background: @clrButtonBgHover;
-			border: 1px solid @clrButtonBorderHover;
+			background: @clrToastButtonBgHover;
+			border: 1px solid @clrToastButtonBorderHover;
 		}
 
 		&:active {
-			background: @clrButtonBgActive;
-			border: 1px solid @clrButtonBorderActive;
+			background: @clrToastButtonBgActive;
+			border: 1px solid @clrToastButtonBorderActive;
 
 			.undo-action-text {
 				color: @clrToastTextActive;
