Arc-Darker: Fix titlebar border

--- a/Arc-Darker/styles/arc-variables.less
+++ b/Arc-Darker/styles/arc-variables.less
@@ -33,6 +33,11 @@
 @clrSidebarBtnTextActive: #ffffff;
 
 //---------------------------------
+// ONLY Arc-Darker: titlebar border
+//---------------------------------
+@clrTitlebarBorder: #262a33;
+
+//---------------------------------
 // Window
 //---------------------------------
 @clrWindowBg: #f5f6f7;
